# BitTorrentClient_from_scratch

./: CMakeLists.txt  bitTorrentDecode.cpp  main.cpp  testingFileOutput.cpp  torrent_understanding.md
include/: bencoding.hpp  torrentfile.cpp
